# rouse

./: Makefile  README.md  pyproject.toml  rouse.py
doc/: requirements.txt
doc/sphinx/source/: conf.py  index.rst  rouse.rst  write_examples_rst.vim
examples/: 00_dummy.ipynb  01_examples.ipynb  README.md  matplotlibrc
tests/: context.py  test_rouse.py
