[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "rouse.py" # Have to explicitly include single module
]

[project]
name = "rouse"
version = "0.1.2"
authors = [
  { name="Simon Grosse-Holz", email="sgh256@mit.edu" }
]
description = "An implementation of the Rouse model of polymer dynamics"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >=1.20",
    "scipy >=1.6",
]

[project.urls]
"Homepage" = "https://github.com/OpenTrajectoryAnalysis/rouse"
"Documentation" = "https://rouse.readthedocs.org/en/latest"
"Bug Tracker" = "https://github.com/OpenTrajectoryAnalysis/rouse/issues"
